[project]
name = "uk-business-directory"
version = "0.1.0"
description = "Self serve dashboard for UK businesses by local authority"
authors = [
    {name = "Dev Anbarasu",email = "anand26dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "dash (>=3.2.0,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
